examples/test/testpolicy907.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy907
  namespace: namespace477
spec:
  podSelector:
    matchLabels:
      key21: value31
      key37: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value12
      podSelector:
        matchLabels:
          key32: value6
          key10: value19
          key38: value28
